# procgen-companion

./: CITATION.cff  LICENSE  README.md  pyproject.toml
examples/: demo-small.yaml  labelling.yaml  no_variations.template.yaml  no_variations.yaml  proc_list.yaml  real_example1.template.yaml  real_example1.yaml
examples/errors/: case_then_length_mismatch.yaml  unmatched_procif.yaml
procgen_companion/: core.py  errors.py  handlers.py  meta.py  procgen.py  tags.py  util.py
procgen_companion/cli/: args.py  commands.py  procgen.py  procgen_bulk.py  run.py
src/procgen_companion/: core.py  errors.py  handlers.py  meta.py  tags.py  util.py
src/procgen_companion/cli/: args.py  commands.py  run.py
tests/: product_test.py
