[tool.poetry]
name        = "procgen-companion"
version     = "0.1.0"
description = "An AnimalAI companion tool for procedural generation of task varations."
authors     = ["Wout Schellaert <wout@schellaert.org>"]
license     = "MIT"
readme      = "README.md"
packages    = [{ include = "procgen_companion" }]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
tqdm   = "^4.65.0"

[tool.poetry.scripts]
procgen = 'procgen_companion.cli.run:run'

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
# > "^0.991" For support of Self type.
autopep8     = "^2.0.2"
types-PyYAML = "^6.0.12.10"
mypy         = "^1.3.0"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
